# siniscalco

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  docker-compose.build.yml  docker-compose.single.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs
backend/migrations/: 0001_initial_cash_storage.sql  0001_schema.sql  0002_add_crypto_account_type.sql  0002_add_fx_rate_to_asset_transactions.sql  0002_asset_quote_sources.sql  0002_cash_entries_date_notes.sql  0002_create_currencies.sql  0003_add_asset_price_history.sql  0003_cash_entries.sql  0003_fx_rate_history.sql  0003_seed_currencies.sql  0004_add_portfolio_snapshots.sql  0004_backfill_fx_rate_history.sql  0004_link_account_currencies.sql  0005_add_account_transfers.sql  0005_link_balance_currencies.sql  0005_opening_position.sql  0006_add_chat_threads.sql  0006_todos.sql  0007_drop_assistant_tables.sql  0007_timeless_todos.sql
backend/src/: api.rs  asset_price_refresh.rs  assistant.rs  chat_threads.rs  config.rs  db.rs  format.rs  fx_refresh.rs  lib.rs  logging.rs  main.rs  mcp.rs  mcp_server.rs  portfolio_snapshot_job.rs  storage.rs
backend/src/api/: accounts.rs  assets.rs  common.rs  currencies.rs  fx.rs  handlers.rs  health.rs  mod.rs  models.rs  portfolio.rs  tests.rs  transactions.rs
backend/src/asset_price_refresh/: config.rs  mod.rs  refresh.rs  tests.rs  types.rs
backend/src/assistant/: handlers.rs  mock.rs  mod.rs  model_registry.rs  openai_client.rs  tool_executor.rs  types.rs
backend/src/graphql/: mod.rs  mutation.rs  query.rs  tests.rs  types.rs
backend/src/storage/: account_id.rs  account_name.rs  account_summary_status.rs  account_type.rs  accounts.rs  amount.rs  asset_id.rs  asset_name.rs  asset_position.rs  asset_prices.rs  asset_quantity.rs  asset_quote_sources.rs  asset_symbol.rs  asset_transaction_type.rs  asset_transactions.rs  asset_type.rs  asset_unit_price.rs  assets.rs  balances.rs  chat_threads.rs  currency.rs  fx.rs  fx_rate.rs  integration_tests.rs  mod.rs  models.rs  portfolio.rs  portfolio_account_summaries.rs  portfolio_allocation.rs  portfolio_holdings.rs  portfolio_snapshots.rs  records.rs  settings.rs  tests.rs  (+6 more)
(+158 files in other folders)
