[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sqlx = { version = "0.8.6", features = ["migrate", "runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3.44", features = ["formatting", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
