[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["migrate", "runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3.44", features = ["formatting", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.149"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
