[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "schema-export"
path = "src/bin/schema_export.rs"

[dependencies]
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
async-trait = "0.1"
axum = "0.8.6"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
if-addrs = "0.13.4"
indexmap = "2"
futures-util = "0.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["migrate", "runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
